fix grid on mobile for index

--- a/app/frontend/components/tour/index/tour_index.css
+++ b/app/frontend/components/tour/index/tour_index.css
@@ -29,6 +29,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    margin-top: 2px;
   }
 }
 
@@ -40,6 +41,7 @@
   .tour-item {
     width: 47%;
     height: 200px;
+    margin-top: 35px;
 
     &--image {
       height: 200px;
